Leverage Java-11's Set.of()
mainly to increase the readability of tests